--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/ngx-scanner": "^19.0.0",
+    "ajv": "^8.17.1",
     "angularx-qrcode": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
