dist/class-check

--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -4,4 +4,4 @@ services:
     env: static 
     rootDir: frontend
     buildCommand: npm install && npm run build
-    publishDir: dist
+    publishDir: dist/class-check
